# elegant_be/routes/productRoutes.js
@@ -1,5 +1,5 @@
 const express = require('express');
-const { createProduct, getProducts, getProductById, updateProduct, deleteProduct, getProductsByCategory, getProductsBySubCategory, getFilteredProducts, getNewestProducts, postWishlistAddOrRemove, getWishlist, checkWishlist } = require('../controllers/productController');
+const { createProduct, getProducts, getProductById, updateProduct, deleteProduct, getProductsByCategory, getProductsBySubCategory, getFilteredProducts, getNewestProducts, postWishlistAddOrRemove, getWishlist, checkWishlist, searchProducts } = require('../controllers/productController');
 const authMiddleware = require('../middlewares/authMiddleware');
 const router = express.Router();
 
@@ -25,6 +25,7 @@ router.get('/product/category/:categoryId', getProductsByCategory);
 router.get('/product/subcategory/:subcategoryId', getProductsBySubCategory);
 
 router.get("/products/newest", getNewestProducts);
+router.get("/products/search", searchProducts);
 
 router.post("/add-wishlist",authMiddleware, postWishlistAddOrRemove);
 router.get("/wishlist",authMiddleware, getWishlist);
